--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,7 +7,10 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "minimal-mistakes-jekyll"
+# gem "github-pages", group: :jekyll_plugins
+# gem "jekyll-include-cache", group: :jekyll_plugins
+gem "jekyll-remote-theme"
+# gem "minimal-mistakes-jekyll"
 gem "jekyll", "~> 4.3.1"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.5"
