--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,8 +33,8 @@ github_username: bigppwong
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
-  # - jekyll-include-cache
-  - jekyll-remote-theme
+  - jekyll-include-cache
+  # - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
