--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,11 +7,11 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "github-pages", group: :jekyll_plugins
+gem "github-pages", "~> 227",group: :jekyll_plugins
 gem "jekyll-include-cache", group: :jekyll_plugins
 # gem "jekyll-remote-theme"
 # gem "minimal-mistakes-jekyll"
-gem "jekyll", "~> 4.3.1"
+gem "jekyll", "~> 3.9.2"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.5"
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
