--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,8 @@ github_username: bigppwong
 # theme: minimal-mistakes-jekyll
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-feed
   - jekyll-include-cache
   # - jekyll-remote-theme
